good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goodbye-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: goodbye
  template:
    metadata:
      labels:
        app: goodbye
    spec:
      containers:
      - name: goodbye
        image: gcr.io/google-samples/hello-app:2.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: goodbye-service
spec:
  selector:
    app: goodbye
  ports:
  - port: 80
    targetPort: 8080
